# TradingSystem

./: README.md
FinalProject/: Coworker Memo.rtf  IBM.1min.TradesAndQuotes.20160128.csv  Project Report.docx  US2.AAPL_180901_181101.csv
FinalProject/R_Implementation/: .Rhistory  Rcode.R  Rcode.Rmd
FinalProject/ieorhomework7/: CMakeLists.txt  main.cpp
FinalProject/ieorhomework7/Tests/: CMakeLists.txt
FinalProject/ieorhomework7/Tests/tests/: CMakeLists.txt  sometests.cpp
FinalProject/ieorhomework7/TradingSystem/: BookBuilder.h  BookUpdate.h  CMakeLists.txt  MDReader.h  MarketSimulator.cpp  MarketSimulator.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  TradingStrategy.cpp  TradingStrategy.h
